2003-05-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in frontend/saned.c
	  include/sane/config.h.in: Test for poll() and disable IPV6 if
	  not found.

2003-05-01 Oliver Rauch <Oliver.Rauch@XSane.org>

	* backend/
		umax-scanner.c  umax-scsidef.h  umax-uc1200se.c  umax-uc630.c
		umax-ug630.c    umax-usb.c      umax.conf        umax.h
		umax-scanner.h  umax-uc1200s.c  umax-uc1260.c   umax-uc840.c
		umax-ug80.c     umax.c          umax.desc
	  doc/sane-umax.man doc/umax/*

	  update of sane-umax backend


2003-04-30  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan.h backend/snapscan-options.c
	  backend/snapscan-scsi.c doc/descriptions/snapscan.desc: SnapScan
	  backend 1.4.26, added support for Agfa Arcus 1200, better support 
	  for Benq 5000.

2003-04-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* lib/getopt.c: Removed #include again, breaks compilation on
	  OS/2.
	* config.guess config.sub: New upstream versions.
	* acinclude.m4 aclocal.m4 configure ltmain.sh: New libtool
	  upstream realease: 1.5.
	* acinclude.m4 aclocal.m4 configure configure.in: Added support
	  for -framework option and check for IOKit for MacOS X. Check for
	  latex tools. Minimum autoconf version is 2.54.
	* ltmain.sh: Add support for -framework option for MacOS X (from
	  Mattias Ellert <mattias.ellert@tsl.uu.se>).
	* sanei/sanei_scsi.c: Added SCSI support for MacOS X (from
	  Mattias Ellert <mattias.ellert@tsl.uu.se>).
	* include/sane/config.h.in: Added test for IOKit.
	* README.darwin: Updated concerning SCSI support.
	* backend/Makefile.in: Disable manual links for shared libraries.
	  This breaks MacOS X and doesn't seem to be necessary on other
	  platforms any more.
	* include/lalloca.h: Don't use builtin alloca on MacOS X.
	* tools/Makefile.in: Build sane-desc by default.
	* tools/sane-desc.c: Fixed segfault.
	* doc/Makefile.in: Only use latex if available.